--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.18.0",
-    "@wix/sdk": "^1.5.7",
+    "@wix/sdk": "^1.15.7",
+    "@wix/stores": "^1.0.326",
     "@wix/wix-ui-icons-common": "^3.12.0",
     "body-scroll-lock": "^4.0.0-beta.0",
     "date-fns": "^2.30.0",
